--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "postcss": "^8.4.49",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-helmet-async": "^2.0.5",
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.1",
