--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -4,8 +4,8 @@
     "module": "ES2022",
     "lib": ["ES2022"],
     "moduleResolution": "node",
-    "rootDir": "./src/server",
-    "outDir": "./dist/server",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -17,5 +17,5 @@
     "types": ["node"]
   },
   "include": ["src/server/**/*", "src/shared/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "src/client"]
 }
