--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "start:server": "node dist/server/index.js",
-    "seed": "tsx src/server/scripts/seed.ts"
+    "seed": "tsx src/server/scripts/seed.ts",
+    "create-admin": "tsx src/server/scripts/createAdmin.ts"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.0",
