--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,45 +88,6 @@ jobs:
           echo "Server files:"
           ls -lah dist/server/ | head -10
 
-      - name: Setup SSH
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
-      - name: Test SSH connection
-        run: |
-          echo "Testing SSH connection..."
-          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "echo 'SSH connection successful'" || {
-            echo "❌ SSH connection failed!"
-            echo ""
-            echo "Possible issues:"
-            echo "1. Public key not added to server ~/.ssh/authorized_keys"
-            echo "2. Wrong username (SERVER_USER)"
-            echo "3. Wrong host (SERVER_HOST)"
-            echo "4. SSH key mismatch"
-            echo ""
-            echo "To fix:"
-            echo "1. Get public key: cat ~/.ssh/github_actions_deploy.pub"
-            echo "2. Add to server: echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
-            echo "3. Set permissions: chmod 600 ~/.ssh/authorized_keys"
-            exit 1
-          }
-          echo "✅ SSH connection successful!"
-
-      - name: Add server to known hosts
-        run: |
-          if [ -z "${{ secrets.SERVER_HOST }}" ]; then
-            echo "❌ Error: SERVER_HOST secret is not set"
-            exit 1
-          fi
-          echo "Adding ${{ secrets.SERVER_HOST }} to known_hosts..."
-          mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
-          ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || {
-            echo "⚠️  Warning: Failed to add host to known_hosts, continuing anyway..."
-          }
-          chmod 600 ~/.ssh/known_hosts
-
       - name: Validate required secrets
         run: |
           if [ -z "${{ secrets.SERVER_HOST }}" ]; then
@@ -142,10 +103,125 @@ jobs:
             exit 1
           fi
           echo "✅ All required secrets are set"
+          echo "Server: ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}"
+
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+      - name: Configure SSH
+        run: |
+          echo "Configuring SSH..."
+          mkdir -p ~/.ssh
+          chmod 700 ~/.ssh
+          
+          # Add server to known_hosts first
+          if [ -n "${{ secrets.SERVER_HOST }}" ]; then
+            echo "Adding ${{ secrets.SERVER_HOST }} to known_hosts..."
+            ssh-keyscan -H -p ${SSH_PORT:-22} ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts 2>&1 || {
+              echo "⚠️  Warning: Failed to add host to known_hosts, will try with StrictHostKeyChecking=no"
+            }
+            chmod 600 ~/.ssh/known_hosts
+          fi
+          
+          # Create SSH config for better connection handling
+          cat >> ~/.ssh/config << EOF
+          Host deploy-server
+            HostName ${{ secrets.SERVER_HOST }}
+            User ${{ secrets.SERVER_USER }}
+            Port ${SSH_PORT:-22}
+            StrictHostKeyChecking no
+            UserKnownHostsFile ~/.ssh/known_hosts
+            ConnectTimeout 30
+            ServerAliveInterval 60
+            ServerAliveCountMax 3
+            TCPKeepAlive yes
+          EOF
+          chmod 600 ~/.ssh/config
+          
+          echo "✅ SSH configured"
+
+      - name: Test SSH connection
+        run: |
+          echo "Testing SSH connection..."
+          echo "Target: ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}"
+          echo "Port: ${SSH_PORT:-22}"
+          
+          MAX_RETRIES=3
+          RETRY_COUNT=0
+          CONNECTION_SUCCESS=false
+          
+          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
+            RETRY_COUNT=$((RETRY_COUNT + 1))
+            echo ""
+            echo "Attempt $RETRY_COUNT/$MAX_RETRIES..."
+            
+            # Try with verbose output on first attempt for debugging
+            if [ $RETRY_COUNT -eq 1 ]; then
+              echo "Testing connection (verbose mode)..."
+              ssh -v -o StrictHostKeyChecking=no \
+                  -o ConnectTimeout=30 \
+                  -o ServerAliveInterval=60 \
+                  -o ServerAliveCountMax=3 \
+                  -o TCPKeepAlive=yes \
+                  ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
+                  "echo 'SSH connection successful'" 2>&1 | head -20 || true
+            fi
+            
+            # Actual connection test
+            if ssh -o StrictHostKeyChecking=no \
+                -o ConnectTimeout=30 \
+                -o ServerAliveInterval=60 \
+                -o ServerAliveCountMax=3 \
+                -o TCPKeepAlive=yes \
+                ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
+                "echo 'SSH connection successful'" 2>/dev/null; then
+              CONNECTION_SUCCESS=true
+              echo "✅ SSH connection successful!"
+              break
+            else
+              echo "❌ Connection attempt $RETRY_COUNT failed"
+              if [ $RETRY_COUNT -lt $MAX_RETRIES ]; then
+                echo "Waiting 5 seconds before retry..."
+                sleep 5
+              fi
+            fi
+          done
+          
+          if [ "$CONNECTION_SUCCESS" = false ]; then
+            echo ""
+            echo "❌ SSH connection failed after $MAX_RETRIES attempts!"
+            echo ""
+            echo "Troubleshooting steps:"
+            echo "1. Verify SERVER_HOST is correct: ${{ secrets.SERVER_HOST }}"
+            echo "2. Verify SERVER_USER is correct: ${{ secrets.SERVER_USER }}"
+            echo "3. Check if server is accessible: ping ${{ secrets.SERVER_HOST }}"
+            echo "4. Verify SSH service is running on server"
+            echo "5. Check server firewall allows port 22 (or custom SSH port)"
+            echo "6. Verify public key is added to server:"
+            echo "   - Get public key from SSH_PRIVATE_KEY secret"
+            echo "   - Add to server: echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
+            echo "   - Set permissions: chmod 600 ~/.ssh/authorized_keys"
+            echo "7. Check if server allows connections from GitHub Actions IP ranges"
+            echo "8. Try connecting manually: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}"
+            echo ""
+            echo "Common issues:"
+            echo "- Firewall blocking port 22"
+            echo "- SSH service not running"
+            echo "- Wrong hostname/IP address"
+            echo "- Network connectivity issues"
+            echo "- Server not allowing connections from GitHub Actions IPs"
+            exit 1
+          fi
 
       - name: Create .env file on server
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << EOF
+          ssh -o StrictHostKeyChecking=no \
+              -o ConnectTimeout=30 \
+              -o ServerAliveInterval=60 \
+              -o ServerAliveCountMax=3 \
+              ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << EOF
           cat > /var/www/christina-sings4you/.env << 'ENVFILE'
           NODE_ENV=production
           PORT=3001
@@ -192,13 +268,17 @@ jobs:
             --include='package-lock.json' \
             --include='deployment/' \
             --include='deployment/**' \
-            -e ssh \
+            -e "ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3" \
             ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/var/www/christina-sings4you/
           
           echo "✅ Files synced successfully"
           
           # Verify dist directory exists on server
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'VERIFY'
+          ssh -o StrictHostKeyChecking=no \
+              -o ConnectTimeout=30 \
+              -o ServerAliveInterval=60 \
+              -o ServerAliveCountMax=3 \
+              ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'VERIFY'
             cd /var/www/christina-sings4you
             if [ -d "dist/client" ] && [ -d "dist/server" ]; then
               echo "✅ Build files verified on server"
@@ -211,7 +291,11 @@ jobs:
 
       - name: Run deployment script on server
         run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          ssh -o StrictHostKeyChecking=no \
+              -o ConnectTimeout=30 \
+              -o ServerAliveInterval=60 \
+              -o ServerAliveCountMax=3 \
+              ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
           cd /var/www/christina-sings4you
           chmod +x deployment/scripts/deploy.sh
           sudo ./deployment/scripts/deploy.sh production
