--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev:client": "vite",
     "dev:server": "tsx watch src/server/index.ts",
     "build": "tsc -b && vite build",
-    "build:server": "tsc -p tsconfig.server.json",
+    "build:server": "tsc -p tsconfig.server.json && node scripts/fix-imports.js",
     "lint": "eslint .",
     "preview": "vite preview",
     "start:server": "node dist/server/index.js",
