--- a/deployment/nginx/christina-sings4you.com.au.http-only.conf
+++ b/deployment/nginx/christina-sings4you.com.au.http-only.conf
@@ -1,58 +1,12 @@
-# Nginx configuration for christina-sings4you.com.au
-# Professional production setup with SSL, security headers, and optimization
+# Nginx configuration for christina-sings4you.com.au (HTTP only - for testing before SSL)
+# Use this configuration if SSL certificate is not installed yet
 
-# Redirect HTTP to HTTPS
+# HTTP Server Configuration (no SSL)
 server {
     listen 80;
     listen [::]:80;
     server_name christina-sings4you.com.au www.christina-sings4you.com.au;
     
-    # Allow Let's Encrypt challenges
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;
-    }
-    
-    # Redirect all other HTTP traffic to HTTPS
-    location / {
-        return 301 https://$server_name$request_uri;
-    }
-}
-
-# HTTPS Server Configuration
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name christina-sings4you.com.au www.christina-sings4you.com.au;
-
-    # SSL Configuration (Let's Encrypt)
-    # Note: If SSL certificate is not installed yet, comment out SSL lines and use HTTP only
-    # After installing SSL with certbot, uncomment these lines
-    ssl_certificate /etc/letsencrypt/live/christina-sings4you.com.au/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/christina-sings4you.com.au/privkey.pem;
-    
-    # SSL Security Settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;
-    
-    # OCSP Stapling (only if SSL is installed)
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/letsencrypt/live/christina-sings4you.com.au/chain.pem;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
-
-    # Security Headers
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://fonts.googleapis.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https: blob:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://api.cloudinary.com https://res.cloudinary.com;" always;
-
     # Root directory for static files (frontend build)
     root /var/www/christina-sings4you/dist/client;
     index index.html;
@@ -78,7 +32,13 @@ server {
     keepalive_timeout 15;
     send_timeout 10;
 
-    # Health check endpoint (bypass proxy)
+    # Security Headers (basic, no HSTS for HTTP)
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+
+    # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
