--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -211,6 +211,17 @@ jobs:
           mkdir -p ~/.ssh
           chmod 700 ~/.ssh
           
+          # Write private key to file
+          if [ -n "${{ secrets.SSH_PRIVATE_KEY }}" ]; then
+            echo "Setting up SSH private key..."
+            echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
+            chmod 600 ~/.ssh/deploy_key
+            echo "✅ SSH private key saved"
+          else
+            echo "❌ Error: SSH_PRIVATE_KEY secret is empty"
+            exit 1
+          fi
+          
           # Add server to known_hosts first
           if [ -n "${{ secrets.SERVER_HOST }}" ]; then
             echo "Adding ${{ secrets.SERVER_HOST }} to known_hosts..."
@@ -226,6 +237,7 @@ jobs:
             HostName ${{ secrets.SERVER_HOST }}
             User ${{ secrets.SERVER_USER }}
             Port ${SSH_PORT:-22}
+            IdentityFile ~/.ssh/deploy_key
             StrictHostKeyChecking no
             UserKnownHostsFile ~/.ssh/known_hosts
             ConnectTimeout 30
@@ -234,6 +246,18 @@ jobs:
             TCPKeepAlive yes
           EOF
           chmod 600 ~/.ssh/config
+          
+          # Test SSH key format
+          echo "Verifying SSH key format..."
+          if ssh-keygen -l -f ~/.ssh/deploy_key > /dev/null 2>&1; then
+            echo "✅ SSH key format is valid"
+            ssh-keygen -l -f ~/.ssh/deploy_key
+          else
+            echo "❌ Error: SSH key format is invalid"
+            echo "First 50 characters of key (for debugging):"
+            head -c 50 ~/.ssh/deploy_key
+            exit 1
+          fi
           
           echo "✅ SSH configured"
 
@@ -255,23 +279,25 @@ jobs:
             # Try with verbose output on first attempt for debugging
             if [ $RETRY_COUNT -eq 1 ]; then
               echo "Testing connection (verbose mode)..."
-              ssh -v -o StrictHostKeyChecking=no \
+              ssh -i ~/.ssh/deploy_key \
+                  -v -o StrictHostKeyChecking=no \
                   -o ConnectTimeout=30 \
                   -o ServerAliveInterval=60 \
                   -o ServerAliveCountMax=3 \
                   -o TCPKeepAlive=yes \
                   ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
-                  "echo 'SSH connection successful'" 2>&1 | head -20 || true
+                  "echo 'SSH connection successful'" 2>&1 | head -30 || true
             fi
             
             # Actual connection test
-            if ssh -o StrictHostKeyChecking=no \
+            if ssh -i ~/.ssh/deploy_key \
+                -o StrictHostKeyChecking=no \
                 -o ConnectTimeout=30 \
                 -o ServerAliveInterval=60 \
                 -o ServerAliveCountMax=3 \
                 -o TCPKeepAlive=yes \
                 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} \
-                "echo 'SSH connection successful'" 2>/dev/null; then
+                "echo 'SSH connection successful'" 2>&1; then
               CONNECTION_SUCCESS=true
               echo "✅ SSH connection successful!"
               break
@@ -295,11 +321,14 @@ jobs:
             echo "4. Verify SSH service is running on server"
             echo "5. Check server firewall allows port 22 (or custom SSH port)"
             echo "6. Verify public key is added to server:"
-            echo "   - Get public key from SSH_PRIVATE_KEY secret"
+            echo "   - Extract public key: ssh-keygen -y -f ~/.ssh/deploy_key"
             echo "   - Add to server: echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
             echo "   - Set permissions: chmod 600 ~/.ssh/authorized_keys"
             echo "7. Check if server allows connections from GitHub Actions IP ranges"
-            echo "8. Try connecting manually: ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}"
+            echo "8. Verify SSH_PRIVATE_KEY secret is correctly formatted (should start with -----BEGIN)"
+            echo ""
+            echo "To extract public key for server setup:"
+            echo "  ssh-keygen -y -f <private_key_file>"
             echo ""
             echo "Common issues:"
             echo "- Firewall blocking port 22"
@@ -307,12 +336,14 @@ jobs:
             echo "- Wrong hostname/IP address"
             echo "- Network connectivity issues"
             echo "- Server not allowing connections from GitHub Actions IPs"
+            echo "- Public key not added to server's ~/.ssh/authorized_keys"
             exit 1
           fi
 
       - name: Create .env file on server
         run: |
-          ssh -o StrictHostKeyChecking=no \
+          ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
               -o ConnectTimeout=30 \
               -o ServerAliveInterval=60 \
               -o ServerAliveCountMax=3 \
@@ -372,14 +403,15 @@ jobs:
             --include='deployment/' \
             --include='deployment/**' \
             --exclude='*' \
-            -e "ssh -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3" \
+            -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=60 -o ServerAliveCountMax=3" \
             ./ ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/var/www/christina-sings4you/
           
           echo "✅ Files synced successfully"
           
           # Verify dist directory exists on server with detailed checks
           echo "🔍 Verifying synced files on server..."
-          ssh -o StrictHostKeyChecking=no \
+          ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
               -o ConnectTimeout=30 \
               -o ServerAliveInterval=60 \
               -o ServerAliveCountMax=3 \
@@ -436,6 +468,22 @@ jobs:
             fi
             
             echo ""
+            echo "Checking server utility scripts (seed, createAdmin)..."
+            if [ -d "dist/server/scripts" ]; then
+              echo "✅ dist/server/scripts found"
+              echo "Available utility scripts:"
+              ls -lah dist/server/scripts/ || echo "  (scripts directory is empty)"
+              echo ""
+              echo "💡 To run seed script on server:"
+              echo "   cd /var/www/christina-sings4you && node dist/server/scripts/seed.js"
+              echo ""
+              echo "💡 To run createAdmin script on server:"
+              echo "   cd /var/www/christina-sings4you && node dist/server/scripts/createAdmin.js"
+            else
+              echo "⚠️  Warning: dist/server/scripts not found (utility scripts not available)"
+            fi
+            
+            echo ""
             echo "📊 Summary of synced files:"
             echo "Total dist size: $(du -sh dist/ | cut -f1)"
             ls -lah dist/
@@ -446,7 +494,8 @@ jobs:
       - name: Pre-deployment verification
         run: |
           echo "🔍 Pre-deployment verification..."
-          ssh -o StrictHostKeyChecking=no \
+          ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
               -o ConnectTimeout=30 \
               -o ServerAliveInterval=60 \
               -o ServerAliveCountMax=3 \
@@ -480,7 +529,8 @@ jobs:
       - name: Run deployment script on server
         run: |
           echo "🚀 Running deployment script on server..."
-          ssh -o StrictHostKeyChecking=no \
+          ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
               -o ConnectTimeout=30 \
               -o ServerAliveInterval=60 \
               -o ServerAliveCountMax=3 \
@@ -620,7 +670,8 @@ jobs:
           echo "  - Admin Panel: https://${{ secrets.SITE_URL }}/admin"
           echo ""
           echo "📊 Server status:"
-          ssh -o StrictHostKeyChecking=no \
+          ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
               -o ConnectTimeout=30 \
               ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'STATUS'
             echo "PM2 Status:"
