--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,8 @@ name: Deploy Full Stack App to VPS
 
 on:
   push:
-    branches: [main]
+    branches: [main, master]
+  workflow_dispatch:  # Allow manual trigger from GitHub Actions UI
 
 jobs:
   deploy:
