--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -93,7 +93,9 @@ server {
     # Basic Server Configuration
     # ========================================================================
     # Root directory for static files (frontend build)
-    root /var/www/christina-sings4you/dist/client;
+    # Note: This will be automatically updated by deployment workflow
+    # Default path assumes Vite build output: dist/client
+    root /var/www/christina-sings4you/frontend/build/dist/client;
     index index.html;
 
     # Server name for error pages
