--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -93,8 +93,8 @@ server {
     # Basic Server Configuration
     # ========================================================================
     # Root directory for static files (frontend build)
-    # Note: This will be automatically updated by deployment workflow
-    # Default path assumes Vite build output: dist/client
+    # Must point to directory containing index.html. No duplicate dist/client.
+    # Updated by deploy; default: frontend/build/dist/client (Vite output)
     root /var/www/christina-sings4you/frontend/build/dist/client;
     index index.html;
 
@@ -163,9 +163,10 @@ server {
     # ------------------------------------------------------------------------
     # API Proxy to Backend Node.js Server
     # ------------------------------------------------------------------------
+    # Use 127.0.0.1 (not localhost) to force IPv4 - avoids "Connection refused"
+    # when nginx resolves localhost to [::1] but Node listens on 0.0.0.0:4000
     location /api {
-        # Proxy to backend server
-        proxy_pass http://localhost:4000;
+        proxy_pass http://127.0.0.1:4000;
         
         # HTTP version
         proxy_http_version 1.1;
@@ -206,7 +207,7 @@ server {
     # Sitemap Proxy
     # ------------------------------------------------------------------------
     location /sitemap.xml {
-        proxy_pass http://localhost:4000;
+        proxy_pass http://127.0.0.1:4000;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -233,18 +234,18 @@ server {
     # ------------------------------------------------------------------------
     # Frontend SPA Routing
     # ------------------------------------------------------------------------
-    # Serve index.html for all routes (React Router)
+    # Use named location @spa to avoid "rewrite or internal redirection cycle"
+    # when try_files falls back to /index.html with wrong root path
     location / {
-        try_files $uri $uri/ /index.html;
-        
-        # Cache control for HTML - no cache
+        try_files $uri $uri/ @spa;
+    }
+    location @spa {
         add_header Cache-Control "no-cache, no-store, must-revalidate";
         add_header Pragma "no-cache";
         add_header Expires "0";
-        
-        # Security headers for HTML pages
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
+        rewrite ^ /index.html break;
     }
 
     # ------------------------------------------------------------------------
