--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -219,6 +219,33 @@ server {
     }
 
     # ------------------------------------------------------------------------
+    # Uploads Directory - Serve uploaded files
+    # ------------------------------------------------------------------------
+    # Serve uploaded files directly from backend uploads directory
+    # This is more efficient than proxying through Node.js
+    location /uploads {
+        # Proxy to backend for file serving (backend handles static files)
+        proxy_pass http://127.0.0.1:4000;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Cache uploaded files for 1 year (they don't change)
+        proxy_cache_valid 200 1y;
+        add_header Cache-Control "public, max-age=31536000, immutable";
+        
+        # Allow larger file sizes for uploads
+        client_max_body_size 10M;
+        
+        # Timeouts for large file downloads
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+    }
+
+    # ------------------------------------------------------------------------
     # Static Files Caching
     # ------------------------------------------------------------------------
     # Cache static assets (images, CSS, JS, fonts) for 1 year
