--- a/deployment/nginx/christina-sings4you.com.au.conf
+++ b/deployment/nginx/christina-sings4you.com.au.conf
@@ -224,13 +224,14 @@ server {
     # Try to serve directly from filesystem first (more efficient)
     # Fallback to proxy if file not found (for backward compatibility)
     location /uploads {
-        # Try to serve from backend uploads directory directly
+        # Serve from backend uploads directory directly
         # This path will be updated by deploy script based on BACKEND_TARGET_DIR
         # Default: /var/www/christina-sings4you/uploads (not backend/uploads)
         # Note: Deploy script will replace this with actual BACKEND_TARGET_DIR/uploads
-        alias /var/www/christina-sings4you/uploads;
+        # Using root instead of alias so try_files works correctly
+        root /var/www/christina-sings4you;
         
-        # If file not found, proxy to backend (backend will handle it)
+        # Try to serve file from filesystem, if not found proxy to backend
         try_files $uri @uploads_proxy;
         
         # Cache uploaded files for 1 year (they don't change)
@@ -242,6 +243,20 @@ server {
         
         # Disable directory listing
         autoindex off;
+        
+        # Set proper content types
+        types {
+            image/jpeg jpg jpeg;
+            image/png png;
+            image/gif gif;
+            image/webp webp;
+            image/heic heic;
+            image/heif heif;
+            video/mp4 mp4;
+            video/webm webm;
+            video/ogg ogg;
+        }
+        default_type application/octet-stream;
     }
     
     # Fallback proxy for uploads (if file not found in filesystem)
