--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,6 @@ SITE_NAME=Christina Sings4U
 # Frontend Configuration
 VITE_API_URL=http://localhost:3001
 VITE_SITE_URL=https://christinasings4u.com.au
+
+# Optional: bump when you replace public/background_music.mp3 so the browser loads the new file (avoids cache)
+# VITE_BACKGROUND_MUSIC_VERSION=1
